--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@mui/material": "^5.7.0",
     "eslint-plugin-react": "^7.29.4",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "^17.0.2",
     "redux": "^4.2.0"
   },
   "devDependencies": {
