--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-quill": "^2.0.0-beta.4",
     "redux": "^4.2.0"
   },
   "devDependencies": {
