--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
+    "@reduxjs/toolkit": "^1.8.4",
+    "@types/react-redux": "^7.1.24",
     "eslint-plugin-react": "^7.29.4",
     "next": "12.1.6",
+    "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-quill": "^2.0.0-beta.4",
+    "react-redux": "^8.0.2",
     "redux": "^4.2.0"
   },
   "devDependencies": {
