--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "18.0.9",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.4",
+    "@types/sanitize-html": "^2.6.2",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "prettier": "2.6.2",
