--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-quill": "^2.0.0-beta.4",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "sanitize-html": "^2.7.2",
     "yup": "^0.32.11"
   },
