--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,4 +27,4 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          script: /home/ubuntu/rjc/scripts/deploy.sh
+          script: /bin/bash /home/ubuntu/rjc/scripts/deploy.sh
