--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react": "^7.29.4",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
+    "next-seo": "^5.5.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
