--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@mui/material": "^5.10.3",
     "@reduxjs/toolkit": "^1.8.4",
     "@types/react-redux": "^7.1.24",
-    "eslint-plugin-react": "^7.29.4",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "next-seo": "^5.5.0",
@@ -38,8 +37,14 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.4",
     "@types/sanitize-html": "^2.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "2.6.2",
     "typescript": "4.6.4"
   }
